--- a/frontend/my-app/package.json
+++ b/frontend/my-app/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.553.0",
     "next": "16.0.3",
+    "ogl": "^1.0.11",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
