--- a/frontend/my-app/package.json
+++ b/frontend/my-app/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.5.19",
+    "critters": "^0.0.23",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.553.0",
     "next": "16.0.3",
@@ -22,10 +23,10 @@
     "react-dom": "19.2.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.0",
+    "autoprefixer": "^10.4.22",
     "eslint": "^9",
     "eslint-config-next": "16.0.3",
-    "postcss": "^8.4.0",
+    "postcss": "^8.5.6",
     "tailwindcss": "^3.4.0"
   }
 }
