--- a/frontend/my-app/package.json
+++ b/frontend/my-app/package.json
@@ -3,14 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "check": "next build --dry-run",
     "clean": "rm -rf .next out node_modules/.cache",
-    "export": "next build && next export"
+    "export": "next build && next export",
+    "analyze": "ANALYZE=true next build"
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.5.19",
