--- a/frontend/my-app/package.json
+++ b/frontend/my-app/package.json
@@ -18,16 +18,16 @@
     "critters": "^0.0.23",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.553.0",
-    "next": "16.0.3",
+    "next": "^16.0.10",
     "ogl": "^1.0.11",
-    "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.22",
     "baseline-browser-mapping": "^2.9.7",
     "eslint": "^9",
-    "eslint-config-next": "16.0.3",
+    "eslint-config-next": "^16.0.10",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.0"
   }
